k8s/cnpg-clusters/cnpg-bookmarked-edge.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: code-search-db
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: HostSNI(`code-search-db.el-jefe.me`)
      services:
        - name: cnpg-bookmarked-rw
          port: 5432
  tls:
    secretName: code-search-db-tls
    options:
      name: code-search-db-postgres-alpn
